[36e6e3b59c97cfbd658673f192c32d72131d187b]: Update 2003-03-03-cielo-ecommerce.md

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -14208,7 +14208,7 @@ O download poderá ser realizado a partir da seguinte URL:</p>
 
 <aside class="notice">Atenção: Para o cartão de débito, quando for enviado na requisição o nó “Wallet”, será necessário o nó “DebitCard” contendo a “ReturnUrl”.</aside>
 
-<aside class="Warning">Atenção:  Devido a necessidade de utilização de Chaves efemeras para realizar operações de crédito, a Recorrnência não está disponivel para transações de Wallets </aside>
+<aside class="notice">Atenção:  Devido a necessidade de utilização de Chaves efemeras para realizar operações de crédito, a Recorrnência não está disponivel para transações de Wallets </aside>
 
 <h2 id="integração-base">Integração base</h2>
 
