--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -14258,7 +14258,7 @@ O <code class="highlighter-rouge">WalletKey</code> Apple Pay pode ser obtido den
 <h4 id="ephemeralpublickey">EphemeralPublicKey</h4>
 
 <p>O <code class="highlighter-rouge">EphemeralPublicKey</code> é a chave utilizado pela Cielo para descriptografar payloads contendo <code class="highlighter-rouge">WalletKeys</code> enviados pelos lojistas. Ele utilizado apenas em integrações no formado <code class="highlighter-rouge">Descriptografia</code>
-Cada Wallet possui um formato de <code class="highlighter-rouge">EphemeralPublicKey</code>.</p>
+Cada Wallet possui um formato de <code class="highlighter-rouge">EphemeralPublicKey</code></p>
 
 <table>
   <thead>
