[d8875135e9a0748cdae6aefbeff9a9bc1400f63d]: Update 2003-03-03-cielo-ecommerce.md

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -14257,8 +14257,8 @@ O <code class="highlighter-rouge">WalletKey</code> Apple Pay pode ser obtido den
 
 <h4 id="ephemeralpublickey">EphemeralPublicKey</h4>
 
-<p>O <code class="highlighter-rouge">EphemeralPublicKey</code> é a chave utilizado pela Cielo para descriptografar payloads contendo <code class="highlighter-rouge">WalletKeys</code> enviados pelos lojistas. Ele utilizado apenas em integrações no formado <code class="highlighter-rouge">Descriptografia</code>
-Cada Wallet possui um formato de <code class="highlighter-rouge">EphemeralPublicKey</code></p>
+<p>O <code class="highlighter-rouge">EphemeralPublicKey</code> é a chave utilizado pela Cielo para descriptografar payloads contendo <code class="highlighter-rouge">WalletKeys</code> enviados pelos lojistas. É utilizado apenas em integrações no formado <code class="highlighter-rouge">Descriptografia</code>
+Cada Wallet possui um formato de <code class="highlighter-rouge">EphemeralPublicKey</code>.</p>
 
 <table>
   <thead>
