[29add44f05bf4b61dffe41c904e24cb6615e9c0a]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -14128,6 +14128,8 @@ The download can be made from the following URL:</p>
 
 <h2 id="base-integration">Base integration</h2>
 
+<p>The wallets on Api Cielo E-commerce have two ways to be used.</p>
+
 <h3 id="components">Components</h3>
 
 <h4 id="walletkey">Walletkey</h4>
