[39fe9eb5a82f0c2b25890c8c4a4fc51f2aa862fd]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -14130,6 +14130,10 @@ The download can be made from the following URL:</p>
 
 <p>The wallets on Api Cielo E-commerce have two ways to be used.</p>
 
+<ol>
+  <li><strong>Decryption</strong> - When the merchant sends the data from the wallet so that API Cielo e-commerce performs the card processing.</li>
+</ol>
+
 <h3 id="components">Components</h3>
 
 <h4 id="walletkey">Walletkey</h4>
