[a1f201b980f6a44a985b583bf4127470e6fde707]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -14131,7 +14131,8 @@ The download can be made from the following URL:</p>
 <p>The wallets on Api Cielo E-commerce have two ways to be used.</p>
 
 <ol>
-  <li><strong>Decryption</strong> - When the merchant sends the data from the wallet so that API Cielo e-commerce performs the card processing.</li>
+  <li><strong>Descriptografia</strong> - Quando o lojista envia os dados da wallet para que a API Cielo e-commerce realize o processamento do cartão</li>
+  <li><strong>Envio do cartão</strong> - Quando a loja busca o cartão, e o enviar por conta propria a API Cielo e-commerce para processamento</li>
 </ol>
 
 <h3 id="components">Components</h3>
