--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -14131,8 +14131,8 @@ The download can be made from the following URL:</p>
 <p>The wallets on Api Cielo E-commerce have two ways to be used.</p>
 
 <ol>
-  <li><strong>Descriptografia</strong> - Quando o lojista envia os dados da wallet para que a API Cielo e-commerce realize o processamento do cartão</li>
-  <li><strong>Envio do cartão</strong> - Quando a loja busca o cartão, e o enviar por conta propria a API Cielo e-commerce para processamento</li>
+  <li><strong>Decryption</strong> - When the merchant sends the data from the wallet so that API Cielo e-commerce performs the card processing</li>
+  <li><strong>Card sending</strong> - When the store searches the card, and send its own to the API Cielo e-commerce for processing</li>
 </ol>
 
 <h3 id="components">Components</h3>
