[a575129bec68bf93895c6f8a29fcdae3c93cabe6]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -14875,10 +14875,10 @@ Each Wallet has an <code class="highlighter-rouge">EphemeralPublicKey</code> for
 <h3 id="sending-the-card-3">Sending the card</h3>
 
 <blockquote>
-  <p>A Wallet MasterPass possui integração apenas no formato <code class="highlighter-rouge">Envio de cartão</code>.</p>
+  <p>Wallet MasterPass has integration only in the format <code class="highlighter-rouge">Sending card</code>.</p>
 </blockquote>
 
-<p>To use the wallet Masterpass <a href="https://developer.mastercard.com/product/masterpass"><strong>Masterpass</strong></a> it is necessary that the store is already registered with Mastercard, and integrated the search of card data of the platform.</p>
+<p>To use the wallet <a href="https://developer.mastercard.com/product/masterpass"><strong>Masterpass</strong></a> it is necessary that the store is already registered with Mastercard, and integrated the search of card data of the platform.</p>
 
 <h4 id="request-42">Request</h4>
 
