[f83c4c0ff4e2255250bcd14ff01665341ea97697]: Update 2003-03-03-cielo-ecommerce.md

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -14251,7 +14251,7 @@ Cada Wallet possui um formato de <code class="highlighter-rouge">WalletKeys</cod
 
 <blockquote>
   <p><strong>Observações:</strong>
-A Wallet MasterPass não possui <code class="highlighter-rouge">WalletKey</code>
+A Wallet MasterPass não possui <code class="highlighter-rouge">WalletKey</code>.
 O <code class="highlighter-rouge">WalletKey</code> Apple Pay pode ser obtido dentro do campo <code class="highlighter-rouge">DATA</code> do payload Apple</p>
 </blockquote>
 
