--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -16712,17 +16712,71 @@ VKeU<br />
 
 <h3 id="prerequisites-1">Prerequisites</h3>
 
+<p>To use Samsung <strong>Decryption</strong> format, it is necessary that the store is already registered with <a href="https://pay.samsung.com/developers"><strong>Samsung</strong></a> platform. The <strong>Decryption</strong> integration requires the merchant to manually upload a CSR certificate in the PEM format provided by Cielo. Contact the Cielo customer service team to obtain the Certificate.</p>
+
 <h4 id="csr-certificate-1">CSR Certificate</h4>
+
+<p>After registering with SamsungPay, the store should request a certificate of extension <code class="highlighter-rouge">PEM</code> to the  team of Cielo products. With the certificate, you should follow the following steps:</p>
+
+<ol>
+  <li>Log in <a href="https://pay.samsung.com/developers"><strong>Samsung</strong></a></li>
+  <li>Select <a href="https://pay.samsung.com/developers/projects/prdnsvc"><strong>My Projects</strong></a> para criar serviço</li>
+  <li>Perform the certificate upload</li>
+  <li>End the process.</li>
+</ol>
+
+<blockquote>
+  <p>The PEM Certificate contains the CSR code requested by Samsung. <br />
+Format of a Certificate <code class="highlighter-rouge">.PEM</code></p>
+</blockquote>
+
+<p>–</p>
+
+<blockquote>
+  <p>—–BEGIN CERTIFICATE REQUEST—–
+MIICezCCAWMCAQAwODELMAkGA1UEBhMCQlIxEDAOBgNVBAoMB2JyYXNwYWcxFzAV<br />
+BgNVBAMMDmJyYXNwYWcuY29tLmJyMIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIB<br />
+CgKCAQEApsk94DAhdgvgUgGT/fufNkofB2AeX/sPXRT0mm92DM8XgbyWw6FgsE2T<br />
+3SFi5WmYwDo12tVjAydUCRzMc6HDIrLBFJsfHgrZWLlf9QIPLZFW/zA9+qZLP+VW<br />
+nGyGBil+rgNhylXfDGjCvUMJ5bSLbcC2oC1HGO613HsJrbsB96sE107RkFhDEChD<br />
+9fZi3MoD2lCwVjbAu/zDatoloxy8Bc02HqlK4sVZuPUzFIZ9gg19G/QU6WI2ompv<br />
+akkhc07xS8QIU/XuzMV5KdpCs/mlRH1QQICSHdviu2UKbKlM9KWqpBOeLwGsQ59P<br />
+mQVb5bPgdAix8KvBAWAi8pcdgjWiIwIDAQABMA0GCSqGSIb3DQEBCwUAA4IBAQBh<br />
+4XwAmQabopYgJgb+8UwIV+LbWKszwXVUq9nYfiDN0OT4KguilfNQQMHvULlHVahJ<br />
+ibiRsuFfkmEkvGkrUm1IMCHjwZjDzJmbB/7VwqHzq5HJ9pa9Dt6xRO7psCycSE4N<br />
+m+iQs18muHWkzPFouBw+HDVgD8NJZS0mPKSnOmdWpajUHkpDsXY+XctLI2n6NAc3<br />
+sy65A6ljFGpjdHG+aJc7TjzjSBpNXyY5bys5zGF44wgOKq/md5nMp6IeqYAZ+D1N<br />
+aWvYpwra9kiVLR3742JWgF7P25rCdpwzXO9KiD9T8VxYnEZeFli+LQXb7c6UJjHl<br />
+/mYyDuIyBIna9ij0Ygff<br />
+—–END CERTIFICATE REQUEST—–<br />”,</p>
+</blockquote>
 
 <h3 id="decryption-3">Decryption</h3>
 
+<p>In the model below, we demonstrate how to use the SamsungPay Cielo integration by sending the WalletKey + EphemeralPublicKey returned by Samsung via Payload</p>
+
 <h4 id="request-43">Request</h4>
+
+<p>Request Sample <em>SamsungPay</em></p>
+
+<blockquote>
+  <p>It is necessary that the store already has a registration and a SamsungPay integration, otherwise it will not be possible to integrate with the API</p>
+</blockquote>
 
 <h4 id="response-49">Response</h4>
 
 <h3 id="sending-the-card-4">Sending the card</h3>
 
+<p>In the model below, we demonstrate how SamsungPay can be used with sending the card open, without the need for WalletKey.</p>
+
 <h4 id="request-44">Request</h4>
+
+<p>In this model, the merchant only informs that the transaction is from an SamsungPay and sends the ECI and CAVV data provided by Samsung</p>
+
+<ul>
+  <li><strong>CAVV</strong> - can be extracted from the <code class="highlighter-rouge">Cryptogram</code> field returned by Apple Samsung in payload</li>
+  <li><strong>ECI</strong> - returned by Samsung Pay in the payload field <code class="highlighter-rouge">eci_indicator</code></li>
+</ul>
 
 <h4 id="response-50">Response</h4>
 
