[2dbacce6ba858e4951da247b0279f9179bdcd4b2]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -13920,6 +13920,8 @@ The return code <strong>“00” represents success in Zero Auth</strong>, the o
 
 <h2 id="authorization-flow">Authorization Flow</h2>
 
+<p><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/images/fluxo-padrao-de-autorizacao 2_en.png" alt="Authorization_Flow" /></p>
+
 <p>The establishment must be <strong>PCI Compliance</strong> (PCI = Security Rules to manipulate card data)</p>
 
 <h3 id="standard-authorization-flow">Standard Authorization Flow</h3>
