[b31c8f3f7030c7016b40758255cc288f157ed718]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -13920,17 +13920,21 @@ The return code <strong>“00” represents success in Zero Auth</strong>, the o
 
 <h2 id="authorization-flow">Authorization Flow</h2>
 
+<h3 id="standard-authorization-flow">Standard Authorization Flow</h3>
+
 <p><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/images/fluxo-padrao-de-autorizacao_2_en.png" alt="Authorization_Flow" /></p>
 
 <p>The establishment must be <strong>PCI Compliance</strong> (PCI = Security Rules to manipulate card data)</p>
 
-<h3 id="standard-authorization-flow">Standard Authorization Flow</h3>
+<h3 id="authorization-flow-with-silent-order-post">Authorization Flow with Silent Order POST</h3>
+
+<p><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/images/fluxo-de-autorizacao-com-sop_1_en.png" alt="Authorization_Flow_POST" /></p>
 
 <p>The server <strong>does not pass the card data</strong> openly.</p>
 
-<h3 id="authorization-flow-with-silent-order-post">Authorization Flow with Silent Order POST</h3>
-
 <h2 id="transactional-flow">Transactional Flow</h2>
+
+<p><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/images/fluxo-silent-order-post-cielo_-_3_en.png" alt="Transactional_Flow" /></p>
 
 <h2 id="integration-4">Integration</h2>
 
