[3dc52aae39584c20a1774d8035768ce39223a132]: Update 2003-03-03-cielo-ecommerce.md

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -14012,7 +14012,7 @@ O código de retorno <strong>00 representa sucesso no Zero Auth</strong>, os dem
 
 <h2 id="fluxo-transacional">Fluxo Transacional</h2>
 
-<p><img src="https://developercielo.github.io/images/fluxo-silent-order-post-cielo.jpg" alt="Fluxo Silent Order Post" /></p>
+<p><img src="https://developercielo.github.io/images/fluxo-silent-order-post-cielo_new.png" alt="Fluxo Silent Order Post" /></p>
 
 <h2 id="integração-4">Integração</h2>
 
