[5b403aa4dc70a4cdc31d597f5c71202162d4e74c]: Update 2003-03-03-cielo-ecommerce.md

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -4588,6 +4588,20 @@ Essa <strong>não é uma permissão concedida pela cielo</strong>, o lojista dev
       <td>2</td>
     </tr>
     <tr>
+      <td><code class="highlighter-rouge">ReasonCode</code></td>
+      <td>Código de retorno da Operação.</td>
+      <td>Texto</td>
+      <td>32</td>
+      <td>Texto alfanumérico</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">ReasonMessage</code></td>
+      <td>Mensagem de retorno da Operaçãoe.</td>
+      <td>Texto</td>
+      <td>512</td>
+      <td>Texto alfanumérico</td>
+    </tr>
+    <tr>
       <td><code class="highlighter-rouge">ReturnCode</code></td>
       <td>Código de retorno da adquirente.</td>
       <td>Texto</td>
@@ -4758,6 +4772,20 @@ Essa <strong>não é uma permissão concedida pela cielo</strong>, o lojista dev
       <td>Byte</td>
       <td>—</td>
       <td>2</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">ReasonCode</code></td>
+      <td>Código de retorno da Operação.</td>
+      <td>Texto</td>
+      <td>32</td>
+      <td>Texto alfanumérico</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">ReasonMessage</code></td>
+      <td>Mensagem de retorno da Operaçãoe.</td>
+      <td>Texto</td>
+      <td>512</td>
+      <td>Texto alfanumérico</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">ReturnCode</code></td>
