[82b8221568eb4492a347bbdef610d6593e0a05fe]: Update 2003-03-03-cielo-ecommerce.md

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -19127,6 +19127,127 @@ Se esse código for exibido, a requisição contem erros (EX: tamanho/condiçõe
   </tbody>
 </table>
 
+<h3 id="códigos-de-motivo-de-retorno">Códigos de Motivo de Retorno</h3>
+
+<table>
+  <thead>
+    <tr>
+      <th>Reason Code</th>
+      <th>Reason Message</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>0</td>
+      <td>Successful</td>
+    </tr>
+    <tr>
+      <td>1</td>
+      <td>AffiliationNotFound</td>
+    </tr>
+    <tr>
+      <td>2</td>
+      <td>IssuficientFunds</td>
+    </tr>
+    <tr>
+      <td>3</td>
+      <td>CouldNotGetCreditCard</td>
+    </tr>
+    <tr>
+      <td>4</td>
+      <td>ConnectionWithAcquirerFailed</td>
+    </tr>
+    <tr>
+      <td>5</td>
+      <td>InvalidTransactionType</td>
+    </tr>
+    <tr>
+      <td>6</td>
+      <td>InvalidPaymentPlan</td>
+    </tr>
+    <tr>
+      <td>7</td>
+      <td>Denied</td>
+    </tr>
+    <tr>
+      <td>8</td>
+      <td>Scheduled</td>
+    </tr>
+    <tr>
+      <td>9</td>
+      <td>Waiting</td>
+    </tr>
+    <tr>
+      <td>10</td>
+      <td>Authenticated</td>
+    </tr>
+    <tr>
+      <td>11</td>
+      <td>NotAuthenticated</td>
+    </tr>
+    <tr>
+      <td>12</td>
+      <td>ProblemsWithCreditCard</td>
+    </tr>
+    <tr>
+      <td>13</td>
+      <td>CardCanceled</td>
+    </tr>
+    <tr>
+      <td>14</td>
+      <td>BlockedCreditCard</td>
+    </tr>
+    <tr>
+      <td>15</td>
+      <td>CardExpired</td>
+    </tr>
+    <tr>
+      <td>16</td>
+      <td>AbortedByFraud</td>
+    </tr>
+    <tr>
+      <td>17</td>
+      <td>CouldNotAntifraud</td>
+    </tr>
+    <tr>
+      <td>18</td>
+      <td>TryAgain</td>
+    </tr>
+    <tr>
+      <td>19</td>
+      <td>InvalidAmount</td>
+    </tr>
+    <tr>
+      <td>20</td>
+      <td>ProblemsWithIssuer</td>
+    </tr>
+    <tr>
+      <td>21</td>
+      <td>InvalidCardNumber</td>
+    </tr>
+    <tr>
+      <td>22</td>
+      <td>TimeOut</td>
+    </tr>
+    <tr>
+      <td>23</td>
+      <td>CartaoProtegidoIsNotEnabled</td>
+    </tr>
+    <tr>
+      <td>24</td>
+      <td>PaymentMethodIsNotEnabled</td>
+    </tr>
+    <tr>
+      <td>98</td>
+      <td>InvalidRequest</td>
+    </tr>
+    <tr>
+      <td>99</td>
+      <td>InternalError</td>
+    </tr>
+  </tbody>
+</table>
+
 </div>
 
 
