[929d436f3a5d66d8716bd0c22731fc45bc9e53da]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -4433,6 +4433,20 @@ PaymentIds associated with the identifier.</p>
       <td>2</td>
     </tr>
     <tr>
+      <td><code class="highlighter-rouge">ReasonCode</code></td>
+      <td>Operation return code.</td>
+      <td>Text</td>
+      <td>32</td>
+      <td>Alphanumeric text</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">ReasonMessage</code></td>
+      <td>Operation return message.</td>
+      <td>Text</td>
+      <td>512</td>
+      <td>Alphanumeric text</td>
+    </tr>
+    <tr>
       <td><code class="highlighter-rouge">ReturnCode</code></td>
       <td>Return code of acquirer.</td>
       <td>Text</td>
