[49bffb94c29ca873939ee7d338985d8dd15a5856]: Update 2003-03-03-cielo-ecommerce.md

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -5894,6 +5894,20 @@ Essa <strong>não é uma permissão concedida pela cielo</strong>, o lojista dev
       <td>Texto alfanumérico</td>
     </tr>
     <tr>
+      <td><code class="highlighter-rouge">ReasonCode</code></td>
+      <td>Código de retorno da Operação.</td>
+      <td>Texto</td>
+      <td>32</td>
+      <td>Texto alfanumérico</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">ReasonMessage</code></td>
+      <td>Mensagem de retorno da Operação.</td>
+      <td>Texto</td>
+      <td>512</td>
+      <td>Texto alfanumérico</td>
+    </tr>
+    <tr>
       <td><code class="highlighter-rouge">ReturnCode</code></td>
       <td>Código de retorno da adquirente.</td>
       <td>Texto</td>
@@ -6012,6 +6026,22 @@ Essa <strong>não é uma permissão concedida pela cielo</strong>, o lojista dev
       <td>Código de autorização.</td>
       <td>Texto</td>
       <td>6</td>
+      <td>Texto alfanumérico</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">ReasonCode</code></td>
+      <td>Código de retorno da Operação.</td>
+      <td>Texto</td>
+      <td>32</td>
+      <td>Texto alfanumérico</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">ReasonMessage</code></td>
+      <td>Mensagem de retorno da Operação.</td>
+      <td>Texto</td>
+      <td>512</td>
       <td>Texto alfanumérico</td>
       <td> </td>
     </tr>
