[417e7abe16118de1e50529837445a69626087786]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -5838,7 +5838,21 @@ PaymentIds associated with the identifier.</p>
       <td>2</td>
     </tr>
     <tr>
-      <td><code class="highlighter-rouge">ReturnCode</code></td>
+      <td><code class="highlighter-rouge">ReasonCode</code></td>
+      <td>Operation return code.</td>
+      <td>Text</td>
+      <td>32</td>
+      <td>Alphanumeric texto</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">ReasonMessage</code></td>
+      <td>Operation return message.</td>
+      <td>Text</td>
+      <td>512</td>
+      <td>Alphanumeric texto</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">ReasonCode</code></td>
       <td>Return code of acquirer.</td>
       <td>Text</td>
       <td>32</td>
@@ -5940,6 +5954,20 @@ PaymentIds associated with the identifier.</p>
       <td>Byte</td>
       <td>—</td>
       <td>2</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">ReasonCode</code></td>
+      <td>Operation return code.</td>
+      <td>Text</td>
+      <td>32</td>
+      <td>Alphanumeric texto</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">ReasonMessage</code></td>
+      <td>Operation return message.</td>
+      <td>Text</td>
+      <td>512</td>
+      <td>Alphanumeric texto</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">ReturnCode</code></td>
