--- a/en/manual/emv3ds.html
+++ b/en/manual/emv3ds.html
@@ -244,9 +244,9 @@ Currently are available:</p>
 <ol>
   <li>Cardholder choose to pay with credit or debit card.</li>
   <li>Merchant requests authentication through Cielo solution.</li>
-  <li>Authentication platform can perform two ways: request cardholder authentication or authenticate without challenge. In the first case, the platform will return the Authentication URL to the merchant. In the second case, the next step is the authentication result.</li>
+  <li>Authentication platform can perform two ways: request cardholder authentication or perform the authentication silently. In the first case, the platform will return the Authentication URL to the merchant. In the second case, the next step is already is the return with the authentication result.</li>
   <li>Merchant presents the authentication interface on <em>lightbox</em> (Issuer Authentication URL).</li>
-  <li>Cardholder fill authentication requirements on issuer environment (challenge).</li>
+  <li>The cardholder authenticates in the issuer (process known as <strong>complete the challenge</strong> process)</li>
   <li>Card issuer returns authentication result to 3DS platform, which pass it back to the merchant.</li>
   <li>Merchant decides if they want to go ahead with authorization process. Once they decide to go ahead, the authentication result must be submitted with the authorization.</li>
   <li>Cielo returns the authorization result to the merchant, which passes it to the cardholder.</li>
@@ -268,7 +268,7 @@ Currently are available:</p>
     <tr>
       <td><strong>SANDBOX</strong></td>
       <td>https://mpisandbox.braspag.com.br</td>
-      <td><strong>Basic <em>(Authorization)</em></strong><br />The Authorization must be generated concatenating “ClientID”, colon character (“:”) and “ClientSecret”<br />Ex. dba3a8db-fa54-40e0-8bab-7bfb9b6f2e2e:D/ilRsfoqHlSUChwAMnlyKdDNd7FMsM7cU/vo02REag=<br />after this, encode the result in base 64. <br />Then, the access token will be generated. For test purposes, use these credentials:<br />ClientID: <strong>dba3a8db-fa54-40e0-8bab-7bfb9b6f2e2e</strong><br />ClientSecret: <strong>D/ilRsfoqHlSUChwAMnlyKdDNd7FMsM7cU/vo02REag=</strong></td>
+      <td><strong>Basic <em>(Authorization)</em></strong><br />The Authorization must be generated concatenating “ClientID”, colon character (“:”) and “ClientSecret”<br />Ex. dba3a8db-fa54-40e0-8bab-7bfb9b6f2e2e:D/ilRsfoqHlSUChwAMnlyKdDNd7FMsM7cU/vo02REag=<br />after this, encode the result in base 64. <br />Then, this will generate an alphanumeric code that will be used in the access token request. For test purposes, use the following data:<br />ClientID: <strong>dba3a8db-fa54-40e0-8bab-7bfb9b6f2e2e</strong><br />ClientSecret: <strong>D/ilRsfoqHlSUChwAMnlyKdDNd7FMsM7cU/vo02REag=</strong></td>
     </tr>
   </tbody>
   <tbody>
