[e1b707b236017ae7fe4aaa8b9e1d2a2f611cffab]: Update 2003-03-03-cielo-ecommerce.md

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -5862,6 +5862,7 @@ Essa <strong>não é uma permissão concedida pela cielo</strong>, o lojista dev
       <th>Tipo</th>
       <th>Tamanho</th>
       <th>Formato</th>
+      <th> </th>
     </tr>
   </thead>
   <tbody>
@@ -5871,6 +5872,7 @@ Essa <strong>não é uma permissão concedida pela cielo</strong>, o lojista dev
       <td>Byte</td>
       <td>—</td>
       <td>2</td>
+      <td> </td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">ProofOfSale</code></td>
@@ -5878,6 +5880,7 @@ Essa <strong>não é uma permissão concedida pela cielo</strong>, o lojista dev
       <td>Texto</td>
       <td>6</td>
       <td>Texto alfanumérico</td>
+      <td> </td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Tid</code></td>
@@ -5885,6 +5888,7 @@ Essa <strong>não é uma permissão concedida pela cielo</strong>, o lojista dev
       <td>Texto</td>
       <td>20</td>
       <td>Texto alfanumérico</td>
+      <td> </td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">AuthorizationCode</code></td>
@@ -5892,6 +5896,7 @@ Essa <strong>não é uma permissão concedida pela cielo</strong>, o lojista dev
       <td>Texto</td>
       <td>6</td>
       <td>Texto alfanumérico</td>
+      <td> </td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">ReasonCode</code></td>
@@ -5899,6 +5904,7 @@ Essa <strong>não é uma permissão concedida pela cielo</strong>, o lojista dev
       <td>Texto</td>
       <td>32</td>
       <td>Texto alfanumérico</td>
+      <td> </td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">ReasonMessage</code></td>
@@ -5906,6 +5912,23 @@ Essa <strong>não é uma permissão concedida pela cielo</strong>, o lojista dev
       <td>Texto</td>
       <td>512</td>
       <td>Texto alfanumérico</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">ProviderReturnCode</code></td>
+      <td>Código de retorno do Provider.</td>
+      <td>Texto</td>
+      <td>32</td>
+      <td>Texto alfanumérico</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">ProviderReturnMessage</code></td>
+      <td>Mensagem de retorno do Provider.</td>
+      <td>Texto</td>
+      <td>512</td>
+      <td>Texto alfanumérico</td>
+      <td> </td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">ReturnCode</code></td>
@@ -5913,6 +5936,7 @@ Essa <strong>não é uma permissão concedida pela cielo</strong>, o lojista dev
       <td>Texto</td>
       <td>32</td>
       <td>Texto alfanumérico</td>
+      <td> </td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">ReturnMessage</code></td>
@@ -5920,6 +5944,7 @@ Essa <strong>não é uma permissão concedida pela cielo</strong>, o lojista dev
       <td>Texto</td>
       <td>512</td>
       <td>Texto alfanumérico</td>
+      <td> </td>
     </tr>
   </tbody>
 </table>
@@ -6040,6 +6065,22 @@ Essa <strong>não é uma permissão concedida pela cielo</strong>, o lojista dev
     <tr>
       <td><code class="highlighter-rouge">ReasonMessage</code></td>
       <td>Mensagem de retorno da Operação.</td>
+      <td>Texto</td>
+      <td>512</td>
+      <td>Texto alfanumérico</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">ProviderReturnCode</code></td>
+      <td>Código de retorno do Provider.</td>
+      <td>Texto</td>
+      <td>32</td>
+      <td>Texto alfanumérico</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">ProviderReturnMessage</code></td>
+      <td>Mensagem de retorno do Provider.</td>
       <td>Texto</td>
       <td>512</td>
       <td>Texto alfanumérico</td>
